<resources>
    <string name="app_name">Warm Up - Vanhackathon</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">TODO List</string>
    <string name="items_title">Items of list %d</string>
    <string name="delete">Delete</string>
    <string name="list_hint">Name of the list</string>
    <string name="item_hint">Description of the item</string>
    <string name="options">Options</string>
    <string name="want_delete">Do you want to delete this record?</string>
    <string name="add">Add</string>
    <string name="invalid_email">Email appears to be invalid.</string>
    <string name="no_password">Password not set.</string>
    <string name="update">Update</string>
    <string name="want_new_item">Do you want to create a new item?</string>
    <string name="want_new_list">Do you want to create a new list?</string>
    <string name="want_sign_out">Do you want to sign out?</string>
    <string name="want_update_item">Do you want to update this item?</string>
    <string name="list_created">A new list was created!</string>
    <string name="item_created">A new item was created!</string>
    <string name="item_updated">A new item was updated!</string>
    <string name="cancel">Cancel</string>
    <string name="leave">Leave app</string>
    <string name="home">Home</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in">Sign in</string>
    <string name="login">Login</string>
    <string name="anonymously_sign_in">Sign in anonymously</string>
    <string name="email_sign_in">Sign in with Email</string>
    <string name="google_sign_in">Sign in with Google</string>
    <string name="anonymous">Anonymous</string>



    <string name="search">Search</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="conn_failed">Connection failed.</string>
    <string name="uid_message">UID is %s.</string>


    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="unknow">Unknow</string>

</resources>
