<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/sheet">



    <LinearLayout
        android:layout_width="440dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/card"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="40dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="5dp"
                android:layout_toLeftOf="@+id/progress"
                android:paddingLeft="5dp"
                android:text="@string/app_name"
                android:textColor="@color/primary_text"
                android:textSize="27sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:visibility="gone" />
        </RelativeLayout>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/password"
            android:inputType="textPassword" />


        <TextView
            android:id="@+id/sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_selector"
            android:gravity="center"
            android:padding="23dp"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_weight="0.5"
                android:background="@drawable/button_selector"
                android:drawableLeft="@mipmap/email"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/register"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/use_anonymously"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/button_selector"
                android:drawableLeft="@mipmap/anonymously"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/anonymous"
                android:textColor="@android:color/white"
                android:textStyle="bold" />


        </LinearLayout>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp" />
    </LinearLayout>
</RelativeLayout>